--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.41",
+    "@langchain/core": "^0.3.49",
+    "@langchain/openai": "^0.5.7",
     "@supabase/supabase-js": "^2.49.4",
+    "langchain": "^0.3.24",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "typescript": "^4.8.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
